Removed ignored files and updated CSS to link images.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
         <meta name="description" content="{{site.description}}"/>
         <meta name="keywords" content="{{site.keywords}}"/>
         <meta name="author" content="{{site.author}}"/>
+        <link rel="icon" href="{{site.baseurl}}/favicon.ico" />
         <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{site.baseurl}}/feed.xml" />
 
         <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/stylesheet.css" media="screen">
