Put http back to icon images because CDN doesn't support https

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,5 @@
 .btn-zip .icon {
-    background: rgba(0, 0, 0, 0) url("//www.stdicon.com/humility/ddd.zip?size=18") no-repeat scroll 0 0;
+    background: rgba(0, 0, 0, 0) url("http://www.stdicon.com/humility/ddd.zip?size=18") no-repeat scroll 0 0;
 }
 .btn-java .icon {
     background: rgba(0, 0, 0, 0) url("../images/java.gif") no-repeat scroll 0 0;
