Added option to cancel download.

--- a/_layouts/download.html
+++ b/_layouts/download.html
@@ -24,7 +24,7 @@ var GetDownloadInfo = function(cb) {
   <span class="filename" style="background-image: url('http://www.stdicon.com/humility/ddd.zip?size=18');"></span> was updated <span class="time"></span> and downloaded <span class="download_count"></span> times.
 </p>
 <p id="download" style="display: none">
-    <span id="countdown">Download will start in <span id="cd">10</span> seconds.</span>
+    <span id="countdown">Download will start in <span id="cd">10</span> seconds. <a class="red" id="countdown-cancel" href="javascript:void(0);">Click to cancel.</a></span>
     <span id="countdown-after" style="display: none">
       If the download didn't start,
       <a href="{{site.gh_repo}}releases/latest" id="dl_link">click here</a>
@@ -52,7 +52,8 @@ onready(()=>{
         $("#dl_link").attr("href", asset.browser_download_url);
         
         
-        $("#cd").countdown(()=>{
+        var countdown = $("#cd").countdown(10)
+          .always(()=>{
             $("#countdown").fadeOut(800,
               ()=>{
                 $("#countdown-after").fadeIn(800);
@@ -60,7 +61,12 @@ onready(()=>{
                   $("#dl_frame").attr("src", asset.browser_download_url);
               }
             );
-          }, 10);
+          })
+          .done(()=>{
+            if(!SETTINGS.debug)
+              $("#dl_frame").attr("src", asset.browser_download_url);
+          });
+        $("#countdown-cancel").one("click", ()=>{countdown.stop();});
     });
 });
 </script>
