LOCAL_SETTINGS instead of local_settings

--- a/_layouts/download.html
+++ b/_layouts/download.html
@@ -50,7 +50,7 @@ onready(()=>{
         $("#info").fadeOut(300, ()=>{
           console.log("Showing download div: ");
           $("#download, #download_info").fadeIn(300,
-            ()=>{console.log("Done showing the div.");
+            ()=>{console.log("Done showing the div.");}
           );
         });
 
