--- a/_layouts/download.html
+++ b/_layouts/download.html
@@ -32,13 +32,33 @@ var GetDownloadInfo = function(cb) {
     </span>
     <iframe style="width:1px; height: 1px; position:absolute; top:-100px; left: -100px" id="dl_frame"></iframe>
 </p>
-
+<hr />
+<h3>Comments</h3>
+<div id="disqus_thread"></div>
+<script>
+    /**
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+     */
+  
+    var disqus_config = function () {
+        this.page.url = location.href;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = "download {{ page.download_title }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+  
+    (function() {  // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = '//lolautoclient.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
 
 <script type="text/javascript">
-onready(()=>{
+onready(function(){
     console.log("Getting download info.");
     console.log("JQuery: ", $);
-    GetDownloadInfo((release)=>{
+    GetDownloadInfo(function (release){
         var asset = findFirstZipAsset(release.assets);
         console.log("Retrieved info: ", release);
         distribute_text({
@@ -47,10 +67,10 @@ onready(()=>{
           download_count: new Number(asset.download_count).toLocaleString("EN-GB")
         });
         console.log("Hiding info div: ");
-        $("#info").fadeOut(300, ()=>{
+        $("#info").fadeOut(300, function (){
           console.log("Showing download div: ");
-          $("#download, #download_info").fadeIn(300,
-            ()=>{console.log("Done showing the div.");}
+          $("#download, #download_info").fadeIn (300,
+           function (){console.log("Done showing the div.");}
           );
         });
 
@@ -58,27 +78,27 @@ onready(()=>{
         
         
         var countdown = $("#cd").countdown(10)
-          .always(()=>{
+          .always( function (){
             $("#countdown").fadeOut(800,
-              ()=>{
+              function() {
                 $("#countdown-after").fadeIn(800);
               }
             );
           })
-          .done(()=>{
+          .done( function (){
             if(SETTINGS.auto_download) {
               $("#dl_frame").attr("src", asset.browser_download_url);
               if(typeof ga=="function") {
-                ga('send', 'event', 'download', 'click', "success", {
+                ga('send', 'event', 'download-'+asset.name, 'download', "success", {
                   'transport': 'beacon',
                 });
               }
             }
           });
-        $("#countdown-cancel").one("click", ()=>{
+        $("#countdown-cancel").one("click", function (){
           // Tell google analytics that download was stopped
           if(typeof ga=="function") {
-            ga('send', 'event', 'download', 'click', "cancel", {
+            ga('send', 'event', 'download-'+asset.name, 'download', "cancel", {
                'transport': 'beacon',
             });
           }
