--- a/_layouts/download.html
+++ b/_layouts/download.html
@@ -22,6 +22,7 @@ var GetDownloadInfo = function(cb) {
 
 <p id="download_info" style="display: none">
   <span class="filename" style="background-image: url('http://www.stdicon.com/humility/ddd.zip?size=18');"></span> was updated <span class="time"></span> and downloaded <span class="download_count"></span> times.
+  <!--<span class="virustotal">View <a href="" id="virustotal">VirusTotal report</a></span> -->
 </p>
 <p id="download" style="display: none">
     <span id="countdown">Download will start in <span id="cd">10</span> seconds. <a class="red" id="countdown-cancel" href="javascript:/* cancel download */void(0);">Click to cancel.</a></span>
@@ -58,7 +59,7 @@ var GetDownloadInfo = function(cb) {
 onready(function(){
     console.log("Getting download info.");
     console.log("JQuery: ", $);
-    GetDownloadInfo(function (release){
+    GetDownloadInfo(function (release) {
         var asset = findFirstZipAsset(release.assets);
         console.log("Retrieved info: ", release);
         distribute_text({
@@ -75,7 +76,7 @@ onready(function(){
         });
 
         $("#dl_link").attr("href", asset.browser_download_url+"#dl_manual");
-        
+        // Request virustotal report
         
         var countdown = $("#cd").countdown(10)
           .always( function (){
