improved seo, split stylesheets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
         <meta name="author" content="{{site.author}}"/>
         <link rel="icon" href="{{site.baseurl}}/favicon.ico" />
         <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{site.baseurl}}/feed.xml" />
-
-        <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/stylesheet.css" media="screen">
+        
         <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/github-dark.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/github.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/stylesheet.css" media="screen">
+        
         {% if page.jquery_ui %}
         <!-- Jquery UI -->
         <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/jqui/jquery-ui.min.css" media="screen">
