--- a/stylesheets/scripts.css
+++ b/stylesheets/scripts.css
@@ -112,3 +112,13 @@ div.script-edit-dialog {
 div.script-edit-dialog form.add-command {
   display: none;
 }
+
+/** sved scripts **/
+table.saved-scripts td.script{
+  font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,sans-serif;
+  background-color: #333;
+  border: 1px solid #666;
+  white-space: pre-wrap;
+  padding: 0.5pt 4pt;
+  color: white;
+}
