--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="{{site.keywords}}"/>
         <meta name="author" content="{{site.author}}"/>
         <link rel="icon" href="{{site.baseurl}}/favicon.ico" />
-        <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{site.baseurl}}/feed.xml" />
+        {% comment %}<link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{site.baseurl}}/feed.xml" />{% endcomment %}
         
         <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/github-dark.css" media="screen">
         <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/github.css" media="screen">
@@ -46,7 +46,8 @@
   
       <header>
         <div class="container">
-          <h1><a href="{{site.baseurl}}/">auto-client</a>{% if page.title %} / <a href="{{site.baseurl}}/{{ page.title | downcase}}">{{ page.title | downcase}}</a>{% endif %}</h1>
+          <h1><a href="{{site.baseurl}}/">auto-client</a>{% if page.url != '/index.html' and page.url != '/' %} <a href="{{site.baseurl}}{{page.url}}">{{page.url | replace:'/',' / '}}</a>{% endif %}</h1>
+          <!-- \{\{page.url\}\} = {{page.url}} -->
           <h2>League of Legends: Auto call, auto accept and other automatic features for LoL PVP.net Client launcher</h2>
   
           <section id="downloads">
