--- a/_layouts/download.html
+++ b/_layouts/download.html
@@ -13,9 +13,9 @@ var GetDownloadInfo = function(cb) {
 
 
 <h3>{{ page.download_title }}</h3>
-<p id="about-download">
+<div id="about-download" itemscope itemtype="http://schema.org/SoftwareApplication">
   {{ content }}
-</p>
+</div>
 <hr />
 <h3>Download will start soon...</h3>
 <p id="info">Checking status of releases, please wait...</p>
